# Formalizer

./: .clang-format  CMakeLists.txt  README.md
Formalizer/: CMakeLists.txt  Main.cpp  WordNetHelper.cpp  WordNetHelper.h  pch.h  std.cpp  std.h
Formalizer/models/wordnet/: example.cpp  example.h  frame.cpp  frame.h  pointer.cpp  pointer.h  synset.cpp  synset.h  wordnet.cpp  wordnet.h
Formalizer/networks/: Layer.cpp  Layer.h
Formalizer/networks/encoder-decoder/: Embedding.cpp  Embedding.h
Formalizer/utilities/: Math.h
Formalizer/utilities/initializers/: RandomInitializer.cpp  RandomInitializer.h  RandomNormal.cpp  RandomNormal.h
